# PaperQuant

./: .gitignore  Handler.py  Trade_adapter.py  environment.yml  pyproject.toml  testing.ipynb
Indicators/: Candle_fetcher.py  Main.py  candle_fetcher.py  levels.py  market_structure.py  momentum.py  moving_avg.py  price_transforms.py  signals.py  statistics.py  trend.py  volatility.py  volume.py
Price_adapter/: db_handler.py  fetch.py  live_fetch.py  main.py
UI/Frontend/: package-lock.json  package.json
UI/Frontend/src/: App.tsx  main.tsx
UI/Frontend/src/components/: AlgorithmsView.tsx  ExecutionTerminal.tsx  HomeView.tsx  PositionsTable.tsx  SettingsView.tsx  SetupView.tsx  Sidebar.tsx  StatCard.tsx
UI/Frontend/src/context/: PaperQuantContext.tsx
UI/Frontend/src/hooks/: useBackend.ts
